Fix scroll jump of sidebar on IE

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -111,7 +111,7 @@
         }
 
         &.sticky-header {
-            position: fixed;
+            position: absolute;
             height: auto;
             top: 0;
             left: 0;
